--- a/profile.html
+++ b/profile.html
@@ -10,13 +10,13 @@
       
         <label>
         Asunto
-        <input type="text" name="asunto" />
+        <input type="text" name="asunto" required/>
       </label>
       <br>
 
       <label>
         Nombre
-        <input type="text" name="nombre" />
+        <input type="text" name="nombre" required/>
       </label>
       <br>
 
@@ -24,7 +24,7 @@
       <label>
         Comentarios
         <div>
-          <textarea name="comentarios" rows="3" cols="30"></textarea>
+          <textarea name="comentarios" rows="3" cols="30" required></textarea>
         </div>
       </label>
       <br>
@@ -32,14 +32,14 @@
 
       <label>
         Correo electrónico
-        <input type="mail" name="correo" />
+        <input type="mail" name="correo" required/>
       </label>
       <br>
 
 
       <label>
         Numero de teléfono
-        <input type="text" name="num_telefono" />
+        <input type="text" name="num_telefono" required/>
       </label>
       <br>
 
