--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Act HTML</title>
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
-    <h1>Profile</h1>
+    <h1 class="center-div">Profile</h1>
 
-    <p>
+    <h4 class="center-div">
       <b>Name: </b>
-      <span>Adrián Cavazos Guerra</span>
-    </p>
+      <span >Adrián Cavazos Guerra</span>
+    </h4>
 
     <p><b>Skills: </b></p>
     <ul>
@@ -22,10 +23,12 @@
     </ul>
 
     <p><b>Social Media: </b></p>
-    <ul>
-      <li><a href="https://github.com/ChalkyMuffin">GitHub</a></li>
-      <li><a href="https://www.linkedin.com/in/adri%C3%A1n-cavazos-guerra-96a141251/?msgControlName=view_message_button&msgConversationId=2-NjIyYTg0MzYtM2E2ZS00ZDM0LTg2MzctZWM1YjVjYzM0MTA0XzAxMw%3D%3D&msgOverlay=true">Linkedin</a></li>
-      <li><a href="mailto:A00833841@tec.mx">Email</a></li>
-    </ul>
+    <p class="social-links">
+      <a href="https://github.com/ChalkyMuffin">GitHub</a>
+      <a href="https://www.linkedin.com/in/adri%C3%A1n-cavazos-guerra-96a141251/?msgControlName=view_message_button&msgConversationId=2-NjIyYTg0MzYtM2E2ZS00ZDM0LTg2MzctZWM1YjVjYzM0MTA0XzAxMw%3D%3D&msgOverlay=true" >Linkedin</a>
+      <a href="mailto:A00833841@tec.mx">Email</a>
+
+    </p>
+   
   </body>
 </html>
