--- a/profile.html
+++ b/profile.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Actividad HTML</title>
+    <link rel="stylesheet" href="profile.css">
+
   </head>
   <body>
     <form id="my_form">
