--- a/03-profile/03-tailwind/index.html
+++ b/03-profile/03-tailwind/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="./src/index.css" rel="stylesheet" />
     <title>Vite + React + TS</title>
   </head>
-  <body>
+  <body class="flex m-0 place-items-center min-w-[320px] min-h-[100vh]" >
+    
+    
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
