--- a/03-profile/03-tailwind/index.html
+++ b/03-profile/03-tailwind/index.html
@@ -19,12 +19,12 @@
             <span>Adrián Cavazos Guerra</span>
         </h4>
 
-        <p><b>Skills: </b></p>
-        <ul>
-            <li>Backend</li>
-            <li>Databases</li>
-            <li>Node.js</li>
-            <li>JavaScript</li>
+        <p class="text-center"><b>Skills: </b></p>
+        <ul class="place-items-center text-center">
+            <li class="text-2xl">Backend</li>
+            <li class="text-2xl">Databases</li>
+            <li class="text-2xl">Node.js</li>
+            <li class="text-2xl">JavaScript</li>
         </ul>
     </div>
 
